Can not see the comments on hk.yahoo.com
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | wontfix |
| firefox64 | --- | wontfix |
| firefox65 | --- | verified |
| firefox66 | --- | verified |
People
(Reporter: johnw.mail, Assigned: mstange)
References
Details
(Keywords: regression, Whiteboard: [webcompat])
Attachments
(2 files)
|
626 bytes,
text/html
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-release+
|
Details | Review |
Comment 2•7 years ago
|
||
Updated•7 years ago
|
Updated•7 years ago
|
Updated•7 years ago
|
Comment 3•7 years ago
|
||
Comment 4•7 years ago
|
||
Comment 5•7 years ago
|
||
Comment 6•7 years ago
|
||
Comment 7•7 years ago
|
||
Updated•7 years ago
|
Updated•7 years ago
|
Updated•7 years ago
|
Comment 8•7 years ago
|
||
Updated•7 years ago
|
Comment 9•7 years ago
|
||
I pretty much believe the bug is on this code: https://searchfox.org/mozilla-central/rev/76fe4bb385348d3f45bbebcf69ba8c7283dfcec7/gfx/src/FilterSupport.cpp#1605-1607 and some other match functions around it can have the same problem as well.
The reason this causes the issue is that it is called in the following chain:
- FilterSupport::ComputePostFilterExtents
- nsFilterInstance::ComputePostFilterExtents
- nsFilterInstance::GetPostFilterBounds
Then either nsSVGIntegrationUtils::ComputePostEffectsVisualOverflowRect or nsSVGUtils::GetPostFilterVisualOverflowRect may be used by hit check.
I guess either the code mentioned above should be fixed, or somewhere in-between should combine the post-effect overflow with the actual content rect when doing hit check.
Comment 10•7 years ago
|
||
Hrm, this could be, this was an optimization I naively added, without knowing this type of filter code was also used for hittesting. Mstange is the right person to look at this and point out how the optimization could be moved.
| Assignee | ||
Comment 11•7 years ago
|
||
I guess either the code mentioned above should be fixed, or somewhere in-between should combine the post-effect overflow with the actual content rect when doing hit check.
I agree. I filed bug 1520553 about that.
To get this regression from 63 fixed quickly, I think we should just remove the opportunistic optimization - that would be a simple patch and it could be uplifted without much risk. The better fix can then go into bug 1520553 and ride the trains normally.
Updated•7 years ago
|
| Assignee | ||
Comment 12•7 years ago
|
||
| Assignee | ||
Comment 13•7 years ago
|
||
I've confirmed that this patch fixes attachment 9034239 [details] in a local Mac build.
| Assignee | ||
Comment 14•7 years ago
|
||
I added a test to the patch.
Comment 15•7 years ago
|
||
Comment 16•7 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 17•7 years ago
|
||
Comment on attachment 9037412 [details]
Bug 1509425 - Undo an optimization that unexpectedly affected hit testing. r?Bas
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1473937
User impact if declined: Clicking some elements on some pages doesn't work (pages that expect filter:opacity(0) elements to be clickable)
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: No
Needs manual test from QE?: Yes
If yes, steps to reproduce: See comment 3 or comment 5
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Extremely low risk, the patch is just a partial backout of bug 1473937 and adds a test.
String changes made/needed:
Updated•7 years ago
|
Comment 18•7 years ago
|
||
Comment on attachment 9037412 [details]
Bug 1509425 - Undo an optimization that unexpectedly affected hit testing. r?Bas
[Triage Comment]
Partially reverts an optimization which ended up causing some web-facing issues. Adds a new automated test. Approved for 65.0 RC2.
Comment 19•7 years ago
|
||
| bugherder uplift | ||
Comment 20•7 years ago
|
||
Verified as fixed on the latest Nightly 66.0a1, tested with Nexus 5 (Android 6.0.1), Nokia 6 (Android 7.1.1), and OnePlus 5T (Android 8.1.0).
Comment 21•7 years ago
|
||
Verified as fixed on Beta 66.0b3 with Nokia 6 (Android 7.1.1), and OnePlus 5T (Android 8.1.0).
Updated•7 years ago
|
| Reporter | ||
Comment 22•7 years ago
|
||
Hi, I am original bug reporter.
Yes, I comfire this bug fixed, after upgrade to 65.0 release on android.
Thanks.
Description
•