Bug 1509425 - Undo an optimization that unexpectedly affected hit testing. r=bas, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D16912

--HG--
extra : source : 519c1045b51e55ece9e463d38412fbf93a37a3d3